# CV_Comparer_Example

./: 01_generate_indices.py  02_query_and_report.py  README.md  application_logger.py  environment_setup.py  pyproject.toml
comparisons/: report_2023-04-07.xlsx
data/: cv_index_file_0.json  cv_index_file_1.json  cv_index_file_2.json  cv_index_file_3.json  index.json
indices/: cv_index.json
