[tool.poetry]
name = "cv-comparer-example"
version = "0.1.0"
description = "Training exercise using OpenAI API to compare CVs"
authors = ["gilgamesh7 <felidaesrule@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cv_comparer_example"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
